[project]
name = "laufband"
version = "0.1.0"
description = "Parallel Iteration with File-Based Coordination"
authors = [
    { name = "Fabian Zills", email = "fzills@icp.uni-stuttgart.de" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "flufl-lock>=8.1.0",
    "ruff>=0.11.7",
    "pytest-cov>=6.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
